--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
       "name": "André König",
       "email": "andre.koenig@posteo.de"
     },
-    "description": "GitHub Markdown Preview",
+    "description": "GitHub Markdown Preview for Zed",
     "files": [
         "index.js"
     ]
